fix: fixed db issue in order creation